tests/fixtures/invalid/string_literal_pointer_difference_different_literals.c
int main(void) {
    char *left = "cat";
    char *right = "dog";
    return right - left;
}
